<resources>
    <string name="app_name">Planner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Planner</string>
    <string name="nav_header_subtitle">Plan events and take notes</string>
    <string name="nav_header_desc">Planner</string>
    <string name="action_settings">Settings</string>

    <string name="menu_item_main">Main</string>
    <string name="menu_item_actions">Actions</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_event">Event</string>
    <string name="menu_new_event">New Event</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_note">Note</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Log out</string>
    <string name="label_add_note">New note</string>
    <string name="label_login">Log in</string>
    <string name="label_registration">Registration</string>

    <string name="login_btn">Log in</string>
    <string name="registration_btn">Registration</string>
    <string name="registr_btn">Register</string>
    <string name="helper_text_requied">Required*</string>
    <string name="name_hint">Name</string>
    <string name="tittle_hint">Title</string>
    <string name="note_hint">Note</string>
    <string name="description_hint">Description</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="name_field_error">Name field is required!</string>
    <string name="email_field_error">Email field is required!</string>
    <string name="email_incorrect_error">Incorrect email format!</string>
    <string name="password_field_error">Password field is required!</string>
    <string name="registr_error_exists">Such user already exists!</string>
    <string name="login_error">Such user does not exist!</string>
    <string name="image_desc_image">Image</string>
    <string name="permission_requied">Permission required</string>
    <string name="perm_read_external_storage_message">Permission to access the external storage is required for this app to load images.</string>
    <string name="save_btn">Save</string>
    <string name="logout_btn">Log Out</string>
    <string name="switch_themes">Night Theme</string>
    <string name="switch_all_days">All Days</string>
    <string name="user_saved">User saved successfully!</string>
    <string name="note_saved">Note saved successfully!</string>
    <string name="event_saved">Event saved successfully!</string>
    <string name="event_date">Event Date</string>
    <string name="tittle_field_error">Title field is required!</string>
    <string name="note_field_error">Note field is required!</string>
    <string name="no_results">No results</string>
    <string name="no_events">No events</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>

    <string name="input_date">Input Date</string>
    <string name="input_start_time">Input Start Time</string>
    <string name="input_end_time">Input End Time</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="dialog_delete">Delete 1 object?</string>
    <string name="dialog_logout">Are you sure you want to log out?</string>
    <string name="text_repeat">Repeat:</string>
    <string name="repeat_btn">Repeat</string>
    <string name="repeat_once">Once</string>
    <string name="repeat_daily">Daily</string>
    <string name="repeat_on_weekdays">On weekdays</string>
    <string name="repeat_annualy">Annually</string>
    <string name="text_tittle">Title:</string>
    <string name="text_description">Description:</string>
    <string name="text_event_date">Event date:</string>
</resources>