<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/NestedScrollBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    tools:context=".ui.newevent.NewEventFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent"
            app:counterEnabled="true"
            app:counterMaxLength="128"
            app:counterTextColor="@color/colorAccent"
            app:helperText="@string/helper_text_requied"
            app:helperTextTextColor="@color/textColorRequied">

            <EditText
                android:id="@+id/editTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tittle_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="64"
                android:maxLines="1"
                android:paddingHorizontal="5dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textColorHint="@color/colorAccent"
            app:counterTextColor="@color/colorAccent">

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="@string/description_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/repeatBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_btn" />

        <RadioGroup
            android:id="@+id/repeatRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/onceRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeat_once" />

            <RadioButton
                android:id="@+id/dailyRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeat_daily" />

            <RadioButton
                android:id="@+id/weekdaysRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeat_on_weekdays" />

            <RadioButton
                android:id="@+id/annualyRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeat_annualy" />

        </RadioGroup>

        <Button
            android:id="@+id/startBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_date" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/appBackground"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:id="@+id/datePickerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/input_date"
                    android:textColor="@color/textColorDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/datePickerCancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="1"
                        android:text="@string/btn_cancel" />

                    <Button
                        android:id="@+id/datePickerOK"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="1"
                        android:text="@string/btn_ok" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/timePickerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/timeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/textColorDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/timePickerCancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="1"
                        android:text="@string/btn_cancel" />

                    <Button
                        android:id="@+id/timePickerOK"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="1"
                        android:text="@string/btn_ok" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>