<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    style="@style/NestedScrollBarStyle"
    tools:context=".ui.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_image"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:contentDescription="@string/image_desc_image"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_account_outline_24"
                app:shapeAppearanceOverlay="@style/RoundedImageViewRounded"
                app:strokeColor="@color/colorAccent"
                app:strokeWidth="4dp" />

            <ImageView
                android:id="@+id/delete_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_close_24"
                tools:ignore="ContentDescription"
                android:visibility="gone"/>
        </FrameLayout>

        <TextView
            android:id="@+id/textError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textColorRequied"
            android:textSize="16sp"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent"
            app:counterEnabled="true"
            app:counterMaxLength="32"
            app:counterTextColor="@color/colorAccent"
            app:helperText="@string/helper_text_requied"
            app:helperTextTextColor="@color/textColorRequied">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="32"
                android:maxLines="1"
                android:paddingHorizontal="5dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent"
            app:counterEnabled="true"
            app:counterMaxLength="64"
            app:counterTextColor="@color/colorAccent"
            app:helperText="@string/helper_text_requied"
            app:helperTextTextColor="@color/textColorRequied">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textWebEmailAddress"
                android:maxLength="64"
                android:maxLines="1"
                android:paddingHorizontal="5dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent"
            app:counterEnabled="true"
            app:counterMaxLength="32"
            app:counterTextColor="@color/colorAccent"
            app:helperText="@string/helper_text_requied"
            app:helperTextTextColor="@color/textColorRequied">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="64"
                android:maxLines="1"
                android:paddingHorizontal="5dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegistr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:text="@string/registr_btn" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
