<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/NestedScrollBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    tools:context=".ui.addnote.AddNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/note_image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/image_desc_image"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_image_outline_24" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/delete_image"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="start"
                        android:layout_marginStart="6dp"
                        android:src="@drawable/ic_close_24"
                        android:visibility="gone"
                        tools:ignore="ContentDescription" />
                </FrameLayout>

            </LinearLayout>

        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent"
            app:counterEnabled="true"
            app:counterMaxLength="128"
            app:counterTextColor="@color/colorAccent"
            app:helperText="@string/helper_text_requied"
            app:helperTextTextColor="@color/textColorRequied">

            <EditText
                android:id="@+id/editTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tittle_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="32"
                android:maxLines="1"
                android:paddingHorizontal="5dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColorHint="@color/colorAccent"
            app:counterTextColor="@color/colorAccent">

            <EditText
                android:id="@+id/editNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="@string/note_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>